hphp/test/slow/container-ref-init/vec-init.php.expectf

Fatal error: Collection element cannot be marked as reference in %s/vec-init.php on line 7
